--- a/App/Views/Home/index.html
+++ b/App/Views/Home/index.html
@@ -19,7 +19,8 @@
                                             <span class="hidden-xs">À la une</span>
                                         </a>
                                     </li>
-                                    <li><a href="#">Autour de moi</a></li>
+                                    <li><a href="#" id="filter-location">Autour de moi</a><script src="public/bootstrap/js/location.js"></script></li>
+                                    
                                 </ul>
                             </div>
                             <div class="col-lg-2 col-sm-2 col-xs-4">
