--- a/App/Views/User/oublie.html
+++ b/App/Views/User/oublie.html
@@ -12,7 +12,7 @@
             <div class="banner-text hidden-xs">
                 <div class="line"></div>
                 <div class="b-text">
-                    <span class="color-active">Des centaines<br> </span> <span class="color-b1">d'articles vous attendent
+                    <span class="color-active">Mot de passe oublié<br> </span> <span class="color-b1">Entrez votre email
                 </span>
                 </div>
             </div>
@@ -27,23 +27,9 @@
                             <input type="email" class="form-control" id="exampleInputEmail1" name="email"
                                    placeholder="sample@gmail.com">
                         </div>
-                        <div class="form-group">
-                            <label for="exampleInputPassword1">Password</label>
-                            <input type="password" class="form-control" id="exampleInputPassword1"
-                                   name="password" placeholder="**********">
-                        </div>
-                        <div class="checkbox">
-                            <label>
-                                <label class="checkbox">
-                                    <input type="checkbox" name="#">
-                                    <span class="arrow"></span>
-                                </label> <span>Se souvenir de moi</span>
-                                <span class="text2">(non recommandé si vous êtes sur un ordinateur partagé)</span>
-                            </label>
-                        </div>
                         <div class="row">
                             <div
-                                    class="col-lg-7"><button type="submit" name="submit" class="btn btn-cv1">Connexion
+                                    class="col-lg-7"><button type="submit" name="submit" class="btn btn-cv1">Envoie
                                 </button></div>
                             <div class="hidden-xs">
                                 <div class="col-lg-1 ortext">ou</div>
@@ -52,7 +38,7 @@
                         </div>
                         <div class="row hidden-xs">
                             <div class="col-lg-12 forgottext">
-                                <a href="/oublie" class="forgot-password">Mot de passe oublié ?</a>
+                                <a href="#" class="forgot-password">Mot de passe oublié ?</a>
                             </div>
                         </div>
                     </form>
