--- a/public/style/main.css
+++ b/public/style/main.css
@@ -1,12 +1,14 @@
 /*
 * General Styles
 */
-body {
+html, body {
   color: #2e2e2e;
   font-family: "Hind Guntur", sans-serif;
   font-size: 16px;
   background-color: #ffffff; 
   overflow-x: hidden;
+  height: 100%;
+  width: 100%;
 }
 
 html{
@@ -620,8 +622,9 @@ video {
     color: white; }
 
 .preview-article {
-  height: 450px; }
-  .preview-article img {
+  height: 740px;
+  width: 100%; }
+  .preview-article img {             /*////////////////ici page article dimention des images///////////////////*/
     object-fit: cover;
     width: 100%;
     height: 100%; }
@@ -630,8 +633,7 @@ video {
 * Content Index
 */
 .content-wrapper {
-  background-color: #fbfdfe; }
-
+  background-color: #fbfdfe;  }
 .content-block .cb-header {
   padding: 20px 0;
   color: #7e7e7e; }
@@ -718,13 +720,14 @@ video {
     display: -ms-flexbox;
     display: -webkit-flex;
     display: flex; }
-.b-article .v-img {
-  height: 200px;
+
+  .b-article .v-img {          /*////////////////ici position de la carte article///////////////////*/
+                                /*///modification ici, heigth enlevé///*/
   border-radius: 2px;
   position: relative; }
   .b-article .v-img img {
     object-fit: cover;
-    height: 100%;
+    height: 350px;
     width: 100%; }
   .b-article .v-img .time {
     position: absolute;
@@ -1086,7 +1089,7 @@ video {
         color: #ea2c5a; }
 
 .cb-content {
-  width: 130% !important; }
+  width: 100% ; }
 
 /*
 * Content Index END
@@ -1110,7 +1113,7 @@ video {
       display: none !important; } }
 
 body.ovf--hidden {
-   overflow: hidden !important; }
+  overflow: hidden !important; }
 
 ul.menu {
   position: relative;
@@ -1618,9 +1621,6 @@ footer {
     font-size: 22px;
     color: #637076;
     padding-left: 15px; }
-    @media only screen and (min-width: 768px) {
-      footer .f-icon {
-        padding-top: 35px; } }
     footer .f-icon a {
       padding-right: 14px;
       color: #637076; }
@@ -1659,13 +1659,17 @@ footer {
   .bg-image img {
     width: 100%; }
 
+  .login-wraper{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+  }
+
   .login-wraper .login-window {
-    position: absolute;
-    width: 570px;
-    top: 50%;
-    left: 50%;
-    margin-left: -2px;
-    margin-top: -288px; }
+    display: flex;
+    flex-direction: column;
+    width: 570px; }
     .login-wraper .login-window .l-head {
       background-color: #ffffff;
       padding: 40px;
@@ -1720,11 +1724,8 @@ footer {
         text-decoration: underline; }
 
 .banner-text {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  margin-top: -50px;
-  margin-left: -580px;
+  display: flex;
+  flex-direction: column;
   width: 550px; }
   .banner-text .line {
     height: 1px;
@@ -2252,16 +2253,14 @@ footer {
       width: 65%; }
   .b-article {
     margin-bottom: 15px; }
-    .b-article .v-img img {
-      width: 100%;
-      height: 100%;
-      object-fit: cover; }
+    /*.b-article .v-img img {            
+      object-fit: cover; }*/              /*//////////////ici j'ai un doute pour l'image en responsive/////////////// */
   .reply-comment .rc-ava {
     text-align: center;
     float: none;
     margin-bottom: 10px; } }
 
-@media (min-width: 768px) and (max-width: 1365px) {
+@media (min-width: 768px) and (max-width: 1365px) { 
   .sv-video img {
     width: 100%; }
   .similar-videos .articleitem {
