--- a/style/_content.scss
+++ b/style/_content.scss
@@ -4,6 +4,7 @@
 
 .content-wrapper {
   background-color: $c-bg;
+  margin: 80%;
 }
 
 .content-block {
@@ -570,7 +571,7 @@
 }
 
 .cb-content {
-    width: 130% !important; // FIX INTERNET EXPLORER ;
+    width: 100% ; // FIX INTERNET EXPLORER ;
 }
 
 /*
