--- a/App/Views/User/account.html
+++ b/App/Views/User/account.html
@@ -34,66 +34,72 @@
                             <div class="row">
                                 <div class="col-lg-8 col-xs-6">
                                     <div class="btn-group bg-clean">
-                                        <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                        <button type="button" class="btn btn-default dropdown-toggle"
+                                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                         </button>
                                         <div class="col-lg-2 col-sm-2 col-xs-4">
                                             <div class="btn-group pull-right bg-clean">
-                                                <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                                <button type="button" class="btn btn-default dropdown-toggle"
+                                                    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                                     Filtrer par <span class="caret"></span>
                                                 </button>
                                                 <ul class="dropdown-menu">
                                                     <li><a onclick="getProductsAndRender('views')"><i
-                                                            class="cv cvicon-cv-calender"></i>
-                                                        Popularité</a></li>
+                                                                class="cv cvicon-cv-calender"></i>
+                                                            Popularité</a></li>
                                                     <li><a onclick="getProductsAndRender('date')"><i
-                                                            class="cv cvicon-cv-calender"></i>
-                                                        Récent</a></li>
+                                                                class="cv cvicon-cv-calender"></i>
+                                                            Récent</a></li>
                                                 </ul>
                                             </div>
-                                        <div class="clearfix"></div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="cb-content articlelist">
-                            <div class="row">
-                                {% for article in articles %}
-                                <div class=" col-lg-3 col-sm-6 articleitem">
-                                    <div class="b-article">
-                                        <div class="v-img">
-                                            <a
-                                                    href="{{ ('/product/' ~ article.id) }}"><img
-                                                    src="{{ ('/storage/' ~ article.picture) }}" alt=""></a>
-                                        </div>
-                                        <div class="v-desc">
-                                            <a href="{{ ('/product/' ~ article.id) }}">{{ article.name }}</a>
-                                            <button>x<script>
-                                                // Gestionnaire d'événements pour les boutons de suppression
-                                                document.querySelectorAll('button[type="submit"]').forEach(button => {
-                                                    button.addEventListener('click', event => {
-                                                        event.preventDefault();
-                                                        if (confirm('Êtes-vous sûr de vouloir supprimer cet article ?')) {
-                                                            const formId = button.parentNode.parentNode.querySelector('form').id;
-                                                            document.getElementById(formId).submit();
-                                                        }
-                                                    });
-                                                });
-                                            </script></button>
-                                        </div>
-                                        <div class="v-views">
-                                            {{article.views}} vues
+                                            <div class="clearfix"></div>
                                         </div>
                                     </div>
                                 </div>
-                                {% endfor %}
+                            </div>
+                            <div class="cb-content articlelist">
+                                <div class="row">
+                                    {% for article in articles %}
+                                    <div class=" col-lg-3 col-sm-6 articleitem">
+                                        <div class="b-article">
+                                            <div class="v-img">
+                                                <a href="{{ ('/product/' ~ article.id) }}"><img
+                                                        src="{{ ('/storage/' ~ article.picture) }}" alt=""></a>
+                                            </div>
+                                            <div class="v-desc">
+                                                <a href="{{ ('/product/' ~ article.id) }}">{{ article.name }}</a>
+                                                <button><a href="/account"
+                                                        onclick="DeleteProduct('{{article.id}}')">x</a>
+                                            </div>
+                                            <div class="v-views">
+                                                {{article.views}} vues
+                                            </div>
+                                        </div>
+                                    </div>
+                                    {% endfor %}
+                                </div>
                             </div>
                         </div>
+                        <!-- /Featured Videos -->
                     </div>
-                    <!-- /Featured Videos -->
                 </div>
             </div>
         </div>
     </div>
-</div>
 
-{% endblock %}
+    {% endblock %}
+    {% block javascript %}
+
+    <script type="text/javascript">
+
+        function DeleteProduct(id) {
+            console.log('text', id);
+            $.ajax({
+                url: "/api/remove" + '?id=' + id
+            }).done(function (result) {
+                console.log('done', result);
+            });
+        }
+
+    </script>
+    {% endblock %}
