--- a/App/Views/User/mail.html
+++ b/App/Views/User/mail.html
@@ -12,7 +12,7 @@
             <div class="banner-text hidden-xs">
                 <div class="line"></div>
                 <div class="b-text">
-                    <span class="color-active">Vous pouvez ontactez {{article.username}} <br> </span> <span class="color-b1"> <h2>ici {{article.email}} </h2>
+                    <span class="color-active">Vous pouvez contactez {{article.username}} <br> </span> <span class="color-b1"> <h2>ici {{article.email}} </h2>
                 </span>
                 </div>
             </div>
