--- a/App/Views/Product/Show.html
+++ b/App/Views/Product/Show.html
@@ -38,7 +38,7 @@
                     </div>
                     <div class="u-area mt-small">
 
-                    <a name="submit" href="/mail.html" class="btn btn-primary u-btn">Contacter {{article.username}}</a>
+                    <a name="submit" href="/mail" class="btn btn-primary u-btn">Contacter {{article.username}}</a>
 
                     </div>
                 </div>
