--- a/App/Views/Product/Add.html
+++ b/App/Views/Product/Add.html
@@ -38,7 +38,8 @@
                             <div class="col-lg-12">
                                 <div class="form-group">
                                     <label for="e2">Ville</label>
-                                    <input class="form-control cityAutoComplete" type="text" autocomplete="off" required />
+                                    <input id="btn_select" list="brow" onkeyup="getWritedText()">
+                                    <select id="brow"></select>  
                                 </div>
                             </div>
 
@@ -72,22 +73,32 @@
 {% endblock body %}
 
 {% block javascript %}
+
 <script type="text/javascript">
-    $('.cityAutoComplete').autoComplete({
-        resolver: 'custom',
-        events: {
-            search: function (qry, callback) {
-                // let's do a custom ajax call
-                $.ajax(
-                    '/api/cities',
-                    {
-                        data: { 'query': qry }
-                    }
-                ).done(function (res) {
-                    callback(res)
-                });
+    const countriesDropDown = document.getElementById("brow");
+
+    function getWritedText(){
+        let data = document.getElementById("btn_select").value;
+        getCities(data);
+    }
+    function getCities(option = '') {
+        $.ajax({
+            url: "/api/cities"+ '?query=' + option,
+        }).done(function (result) {
+        console.log(countriesDropDown.lengt)
+        //    for (var i=0; i<countriesDropDown.length; i++) {
+        //         countriesDropDown.remove(i);
+        //     }
+        //TODO:remove all options from countriesDropDown 
+
+            for (let key in result) {
+                let option = document.createElement("option");
+                option.setAttribute('value', result[key].ville_id);
+                let optionText = document.createTextNode(result[key].ville_nom);
+                option.appendChild(optionText);
+                countriesDropDown.appendChild(option);
             }
-        }
-    });
+        });
+    }
 </script>
 {% endblock %}
