--- a/App/Views/User/cookie.html
+++ b/App/Views/User/cookie.html
@@ -1,62 +1,35 @@
 {% extends "base.html" %}
 
-{% block title %}Produit{% endblock %}
+{% block title %}Politique relative aux cookies{% endblock %}
 
 {% block body %}
-<div class="container mt-30">
-    <form action="" method="post" enctype="multipart/form-data">
-        <div class="row">
-            <div class="col-lg-6">
-                <div class="u-form">
-                    <div class="row">
-                        <div class="col-lg-12">
-                            <div class="form-group">
-                                <label for="e1">Titre</label>
-                                <input type="text" name="name" class="form-control" id="e1"
-                                    placeholder="Jeu de cartes (rare)" required>
-                            </div>
-                            <p>Notre site utilise des cookies pour améliorer votre expérience de navigation. Les
-                                cookies sont de petits fichiers texte qui sont stockés sur votre ordinateur ou votre
-                                appareil mobile lorsque vous visitez notre site. Ils nous permettent de vous
-                                reconnaître et de mémoriser vos préférences lors de vos prochaines visites.
-
-                                Nous utilisons les cookies suivants :
-
-                                Cookies de session : ces cookies sont temporaires et sont supprimés dès que vous
-                                fermez votre navigateur. Ils sont utilisés pour maintenir votre session de
-                                navigation active et pour vous permettre d'accéder à certaines fonctionnalités de
-                                notre site.
-
-                                Cookies persistants : ces cookies restent sur votre ordinateur ou votre appareil
-                                mobile même après la fermeture de votre navigateur. Ils nous permettent de
-                                reconnaître votre appareil lors de vos prochaines visites et de mémoriser vos
-                                préférences, telles que votre langue ou votre pays.
-
-                                Cookies de suivi : ces cookies sont utilisés pour suivre votre navigation sur notre
-                                site et pour collecter des informations sur votre comportement en ligne, telles que
-                                les pages que vous visitez et les liens sur lesquels vous cliquez. Ces informations
-                                sont utilisées pour personnaliser notre contenu et nos publicités en fonction de vos
-                                intérêts et de vos préférences.
-
-                                Cookies de tiers : nous utilisons également des cookies de tiers, tels que ceux de
-                                Google Analytics, pour collecter des informations sur l'utilisation de notre site.
-                                Ces cookies sont utilisés pour nous aider à comprendre comment les visiteurs
-                                interagissent avec notre site, pour améliorer notre contenu et nos services, et pour
-                                personnaliser nos publicités.
-
-                                Vous pouvez contrôler l'utilisation des cookies sur notre site en modifiant les
-                                paramètres de votre navigateur. Toutefois, veuillez noter que la désactivation des
-                                cookies peut affecter votre expérience de navigation sur notre site.
-
-                                En continuant à utiliser notre site,vous consentez à notre utilisation des cookies
-                                conformément à cette politique.
-                            </p>
-                        </div>
-                    </div>
+<div class="container mt-5">
+    <div class="row justify-content-center">
+        <div class="col-lg-8">
+            <div class="card">
+                <div class="card-body">
+                    <h5 class="card-title">Politique relative aux cookies</h5>
+                    <p class="card-text">
+                        Notre site utilise des cookies pour améliorer votre expérience de navigation. Les cookies sont de petits fichiers texte qui sont stockés sur votre ordinateur ou votre appareil mobile lorsque vous visitez notre site. Ils nous permettent de vous reconnaître et de mémoriser vos préférences lors de vos prochaines visites.
+                    </p>
+                    <p class="card-text">
+                        Nous utilisons les cookies suivants :
+                    </p>
+                    <ul class="card-text">
+                        <li>Cookies de session : ces cookies sont temporaires et sont supprimés dès que vous fermez votre navigateur. Ils sont utilisés pour maintenir votre session de navigation active et pour vous permettre d'accéder à certaines fonctionnalités de notre site.</li>
+                        <li>Cookies persistants : ces cookies restent sur votre ordinateur ou votre appareil mobile même après la fermeture de votre navigateur. Ils nous permettent de reconnaître votre appareil lors de vos prochaines visites et de mémoriser vos préférences, telles que votre langue ou votre pays.</li>
+                        <li>Cookies de suivi : ces cookies sont utilisés pour suivre votre navigation sur notre site et pour collecter des informations sur votre comportement en ligne, telles que les pages que vous visitez et les liens sur lesquels vous cliquez. Ces informations sont utilisées pour personnaliser notre contenu et nos publicités en fonction de vos intérêts et de vos préférences.</li>
+                        <li>Cookies de tiers : nous utilisons également des cookies de tiers, tels que ceux de Google Analytics, pour collecter des informations sur l'utilisation de notre site. Ces cookies sont utilisés pour nous aider à comprendre comment les visiteurs interagissent avec notre site, pour améliorer notre contenu et nos services, et pour personnaliser nos publicités.</li>
+                    </ul>
+                    <p class="card-text">
+                        Vous pouvez contrôler l'utilisation des cookies sur notre site en modifiant les paramètres de votre navigateur. Toutefois, veuillez noter que la désactivation des cookies peut affecter votre expérience de navigation sur notre site.
+                    </p>
+                    <p class="card-text">
+                        En continuant à utiliser notre site, vous consentez à notre utilisation des cookies conformément à cette politique.
+                    </p>
                 </div>
-    </form>
+            </div>
+        </div>
+    </div>
 </div>
-</div>
-
-
 {% endblock body %}
