--- a/App/Views/Product/Show.html
+++ b/App/Views/Product/Show.html
@@ -9,12 +9,9 @@
         <div class="row">
             <div class="col-lg-8 col-xs-12 col-sm-12">
                 <div class="preview-article">
-                    <img
-                            src="{{ ('/storage/' ~ article.picture) }}"/>
-
+                    <img src="{{ ('/storage/' ~ article.picture) }}" />
                 </div>
-                <h1><a href="#">{{article.name}}</a></h1>
-
+                <h1><a href="#">{{ article.name }}</a></h1>
 
                 <div class="author">
                     <div class="author-head">
@@ -34,13 +31,10 @@
                 <div class="info">
                     <div class="info-content">
                         <h4>Description:</h4>
-                        <p>{{article.description}}</p>
+                        <p>{{ article.description }}</p>
                     </div>
                     <div class="u-area mt-small">
-
-                    <a name="submit" href="mailto:{{article.email}}" class="btn btn-primary u-btn">Contacter {{article
-                        .username}}</a>
-
+                        <a href="#contactModal" data-toggle="modal" class="btn btn-primary u-btn">Contacter {{ article.username }}</a>
                     </div>
                 </div>
             </div>
@@ -53,11 +47,11 @@
                         {% for suggestion in suggestions %}
                         <div class="col-lg-12 col-sm-12">
                             <div class="v-desc">
-                                <a href="{{ ('/product/' ~ suggestion.id) }}">{{suggestion.name}}</a>
+                                <a href="{{ ('/product/' ~ suggestion.id) }}">{{ suggestion.name }}</a>
                             </div>
 
                             <div class="v-views">
-                                {{ suggestion.views}} vues
+                                {{ suggestion.views }} vues
                             </div>
 
                             <hr>
@@ -69,6 +63,34 @@
             </div>
         </div>
     </div>
-</div>
+
+    <!-- Contact Modal -->
+    <div id="contactModal" class="modal fade" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                
+                <form action="https://formsubmit.co/{{ article.username }}" method="POST">
+                    <div class="modal-header">
+                        <h4 class="modal-title">Contacter {{ article.username }}</h4>
+                        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+                    </div>
+                    <div class="modal-body">
+                        <div class="form-group">
+                            <label for="description" class="control-label">Description:</label>
+                            <input type="text" class="form-control" id="description" name="description" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="message" class="control-label">Message:</label>
+                            <textarea class="form-control" id="message" name="message" required></textarea>
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="submit" class="btn btn-primary">Envoyer</button>
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Annuler</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
 
 {% endblock body %}
