commit fin de journée

--- a/App/Views/Home/index.html
+++ b/App/Views/Home/index.html
@@ -19,7 +19,7 @@
                                             <span class="hidden-xs">À la une</span>
                                         </a>
                                     </li>
-                                    <li><button onclick="getLocation()">Autour de moi </button></script></li>
+                                    <li><button class="adm" onclick="getLocation()">Autour de moi </button></script></li>
                                     
                                 </ul>
                             </div>
