--- a/App/Views/User/account.html
+++ b/App/Views/User/account.html
@@ -8,7 +8,8 @@
     <div class="container-fluid account-header">
         <div class="row">
             <h1>
-                {{ user.username }}
+                <h1>Bienvenue, {{ user.username }}!</h1>
+                    <div class="titreMc">Adresse e-mail: {{ user.email }} </div>
             </h1>
 
         </div>
