--- a/public/style/main.css
+++ b/public/style/main.css
@@ -81,6 +81,14 @@ label {
   -webkit-box-shadow: none;
   box-shadow: none; }
 
+.adm {
+  border-radius: 20px;
+}
+
+.titreMc {
+  color: #ffffff;
+}
+
 .btn-default:hover,
 .btn-default:active,
 .btn-default.active,
