--- a/App/Views/Product/Show.html
+++ b/App/Views/Product/Show.html
@@ -34,7 +34,7 @@
                         <p>{{ article.description }}</p>
                     </div>
                     <div class="u-area mt-small">
-                        <a href="#contactModal" data-toggle="modal" class="btn btn-primary u-btn">Contacter {{ article.username }}</a>
+                        <a href="#contactModal" data-toggle="modal" class="btn btn-primary u-btn">Contacter {{ article.username }} </a>
                     </div>
                 </div>
             </div>
@@ -69,7 +69,7 @@
         <div class="modal-dialog">
             <div class="modal-content">
                 
-                <form action="https://formsubmit.co/{{ article.username }}" method="POST">
+                <form action="https://formsubmit.co/ {{ article.email }} " method="POST">
                     <div class="modal-header">
                         <h4 class="modal-title">Contacter {{ article.username }}</h4>
                         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
