--- a/App/Views/User/account.html
+++ b/App/Views/User/account.html
@@ -9,7 +9,7 @@
         <div class="row">
             <h1>
                 <h1>Bienvenue, {{ user.username }}!</h1>
-                    <div class="titreMc">Adresse e-mail: {{ user.email }} </div>
+                <div class="titreMc">Adresse e-mail: {{ user.email }} </div>
             </h1>
 
         </div>
@@ -69,8 +69,9 @@
                                             </div>
                                             <div class="v-desc">
                                                 <a href="{{ ('/product/' ~ article.id) }}">{{ article.name }}</a>
-                                                <button><a href="/account"
-                                                        onclick="DeleteProduct('{{article.id}}')">x</a>
+                                                <button type="button" class="suppr"
+                                                    onclick="return confirmation('Êtes-vous sûr de vouloir supprimer cette annonce?') && DeleteProduct('{{article.id}}')">X</button>
+
                                             </div>
                                             <div class="v-views">
                                                 {{article.views}} vues
@@ -100,6 +101,16 @@
             }).done(function (result) {
                 console.log('done', result);
             });
+        }
+
+        function confirmation() {
+            if (confirm("Êtes-vous sûr de vouloir supprimer cette annonce ?")) {
+                // Code à exécuter si l'utilisateur clique sur "OK"
+                // Par exemple, envoyer une requête de suppression
+            }
+            else {
+                // Code à exécuter si l'utilisateur clique sur "Annuler"
+            }
         }
 
     </script>
