--- a/App/Views/Product/Show.html
+++ b/App/Views/Product/Show.html
@@ -44,7 +44,7 @@
                 <p>Vous aimerez peut-être...</p>
                 <div class="list">
                     <div class="h-article row">
-                        {% for suggestion in suggestions %}
+                        {% for suggestion in suggestions [:7] %}
                         <div class="col-lg-12 col-sm-12">
                             <div class="v-desc">
                                 <a href="{{ ('/product/' ~ suggestion.id) }}">{{ suggestion.name }}</a>
