--- a/App/Views/base.html
+++ b/App/Views/base.html
@@ -47,7 +47,7 @@
                             <li class="color-active"><a href="/product">Déposer une annonce</a></li>
                         </ul>
                     </div>
-
+                    <!-- search -->
                     <div class="col-lg-6 col-sm-8 col-xs-3">
                         <form action="search.html" method="post">
                             <div class="topsearch">
