--- a/App/Views/Product/Add.html
+++ b/App/Views/Product/Add.html
@@ -61,7 +61,7 @@
                         {% endif %}
                     </div>
                     <div class="u-terms">
-                        <p>En soumettant votre article vous acceptez les <a href="#">conditions générales</a> de Vide
+                        <p>En soumettant votre article vous acceptez les <a href="/poliGre">conditions générales</a> de Vide
                             Grenier en
                             ligne.</p>
                     </div>
