--- a/App/Views/User/account.html
+++ b/App/Views/User/account.html
@@ -8,13 +8,12 @@
     <div class="container-fluid account-header">
         <div class="row">
             <h1>
-                <h1>Bienvenue, {{ user.username }}!</h1>
-                <div class="titreMc">Adresse e-mail: {{ user.email }} </div>
+                <h1>Bienvenue, {{ user.username|title }}!</h1>
+                
+                <div class="titreMc">Adresse e-mail: {{ user.email }}</div>
             </h1>
-
         </div>
     </div>
-
 
     <div class="content-wrapper">
         <div class="container">
@@ -69,8 +68,8 @@
                                             </div>
                                             <div class="v-desc">
                                                 <a href="{{ ('/product/' ~ article.id) }}">{{ article.name }}</a>
-                                                <button type="button" class="suppr"
-                                                    onclick="return confirmation('Êtes-vous sûr de vouloir supprimer cette annonce?') && DeleteProduct('{{article.id}}')">X</button>
+                                                <button type="button" class="suppr" onclick="DeleteProduct('{{article.id}}'); location.reload();">X</button>
+
 
                                             </div>
                                             <div class="v-views">
