--- a/App/Views/Home/index.html
+++ b/App/Views/Home/index.html
@@ -19,8 +19,8 @@
                                             <span class="hidden-xs">À la une</span>
                                         </a>
                                     </li>
-                                    <li><button onclick="getLocation()">Autour de moi </button></script></li>
-                                    
+                                    <li><button onclick="stLoc()">Autour de moi </button></li>
+                                    <p id="demo"></p>
                                 </ul>
                             </div>
                             <div class="col-lg-2 col-sm-2 col-xs-4">
@@ -90,24 +90,42 @@
              .appendTo($('#articlelist'));
         }
 
-        $( document ).ready(function() {
-            getProductsAndRender();
-        });
-        
-        var x = document.getElementById("demo");
-        function getLocation() {
-        if (navigator.geolocation) {
-            navigator.geolocation.getCurrentPosition(showPosition);
-        } else {
-            x.innerHTML = "Geolocation is not supported by this browser.";
-        }
+        //Géolocalisation
+
+        var valuesX=[],
+            lastPos={a: -1, b: -1};
+        //This is to show the current position:
+
+        function handleLoc(pos)  {
+            // in event handler remember lastPos to use it in stLoc on click.
+            lastPos.a = pos.coords.latitude;
+            lastPos.b = pos.coords.longitude;
+            var p = new L.LatLng(lastPos.a, lastPos.b);
+            mark(p);
         }
 
-        function showPosition(position) {
-        x.innerHTML = "Latitude: " + position.coords.latitude +
-        "<br>Longitude: " + position.coords.longitude;
+        //Here I intend to store the latitude using "valuesX.push":
+
+        function stLoc()  {
+            if(lastPos.a != -1) {
+                valuesX.push(lastPos.a);
+            }
+            return false;
+            //console.log()
         }
 
+        //And this is to enable the geolocation:
+        // function handleErr(pos) {
+        //     document.write("could not determine location");
+        // }
+
+        // if(navigator.geolocation) {
+        //     navigator.geolocation.watchPosition(handleLoc,handleErr);
+        // }
+        // else {
+        //     document.write("geolocation not supported");
+        // }
+        // console.log(stLoc())
     </script>
 {% endblock %}
 
